--- a/test/_data/navigation.yml
+++ b/test/_data/navigation.yml
@@ -15,57 +15,28 @@ main:
   - title: "Extra Menu Item Long Title"
     url: /
 
-# sidebar navigation list sample
-sidebar-sample:
-  - title: "Parent Page A"
+docs:
+  - title: Database
     children:
-      - title: "Child Page A1"
-        url: /child-page-a1/
-      - title: "Child Page A2"
-        url: /child-page-a2/
-      - title: "Child Page A3"
-        url: /child-page-a3/
-      - title: "Child Page A4"
-        url: /child-page-a4/
-  - title: "Parent Page B"
+      - title: "Oracle"
+        url: oracle/
+        category: "oracle"
+      - title: "MS-SQL"
+        url: mssql/
+        category: "mssql"
+      - title: "MariaDB"
+        url: mariadb/
+        category: "mariadb"
+  - title: Server
     children:
-      - title: "Child Page B1"
-        url: /child-page-b1/
-      - title: "Child Page B2"
-        url: /child-page-b2/
-      - title: "Child Page B3"
-        url: /child-page-b3/
-      - title: "Child Page B4"
-        url: /child-page-b4/
-      - title: "Child Page B5"
-        url: /child-page-b5/
-  - title: "Parent Page C"
+      - title: "Ubuntu"
+        url: ubuntu/
+        category: "ubuntu"
+      - title: "Windows Server"
+        url: windows-server/
+        category: "windows-server"
+  - title: Etc
     children:
-      - title: "Child Page C1"
-        url: /child-page-c1/
-      - title: "Child Page C2"
-        url: /child-page-c2/
-      - title: "Child Page C3"
-        url: /child-page-c3/
-      - title: "Child Page C4"
-        url: /child-page-c4/
-      - title: "Child Page C5"
-        url: /child-page-c5/
-  - title: "Parent Page D"
-    children:
-      - title: "Child Page D1"
-        url: /child-page-d1/
-      - title: "Child Page D2"
-        url: /child-page-d2/
-      - title: "Child Page D3 (External)"
-        url: https://your-domain.com
-  
-sidebar-category:
-  - title: "카테고리"
-    children:
-      - title: "Coding Test"
-        url:  "/Coding Test"
-      - title: "C++"
-        url:  "/C+"
-      - title: "C#"
-        url:  "/C#"
+      - title: "Jekyll"
+        url: jekyll/
+        category: "jekyll"
